--- a/src/assets/scss/pages/_authentication.scss
+++ b/src/assets/scss/pages/_authentication.scss
@@ -4,17 +4,12 @@
 
 
 .auth-page-wrapper{
-    .auth-page-content{
-        padding-bottom: $footer-height;
-        position: relative;
+    .auth-page-content{ 
+        position: absolute;
         z-index: 2;
-        width: 100%;
+        width: 100%; 
     }
-    .footer{
-        left: 0;
-        background-color: transparent;
-        color: var(--#{$prefix}body-color);
-    }
+    
 }
 
 .auth-one-bg-position{
@@ -23,24 +18,39 @@
     left: 0;
     right: 0;
     width: 100%;
-    height: 380px;
+    height: 80%;
+    
     
     @media (max-width: 575.98px) {
         height: 280px;
     }
 }
-
+ 
 .auth-one-bg{
-    background-image: url("../../images/auth-one-bg.jpg");
-    background-position: center;
-    background-size: cover;
+    background-image: url("../../images/homepage/Frame.svg");
+    background-position: center 50px;
+    background-repeat: no-repeat;
+    background-size: 65%;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); 
 
     .bg-overlay{
-        background: linear-gradient(to right, darken($primary, 6%), $primary);
-        opacity: 0.9;
+        background: linear-gradient(to right, darken($primary, 0%), $primary);
+        opacity: 0;
     }
 }
+.carousel-inner p {
+    margin-bottom: 0;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #f7f7f7;
+    padding: 10px;
+  }
 
+//   @media (max-width: 768px) {
+//     .carousel {
+//       display: none;
+//     }
+//   }
 .shape{
     position: absolute;
     bottom: 0;
@@ -96,10 +106,10 @@
 // Auth cover
 
 .auth-bg-cover{
-    background: $auth-bg-cover;
+    // background: $auth-bg-cover;
 
     > .bg-overlay{
-        background-image: url("../../images/cover-pattern.png");
+        // background-image: url("../../images/cover-pattern.png");
         background-position: center;
         background-size: cover;
         opacity: 1;
@@ -139,3 +149,5 @@
         }
     }
 }
+
+ 
