changed primary color to #00CCCC

--- a/src/assets/scss/config/material/_variables.scss
+++ b/src/assets/scss/config/material/_variables.scss
@@ -217,7 +217,7 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary:       $indigo;
+$primary:       #00CCCC;
 $secondary:     $blue;
 $success:       $green;
 $info:          $cyan;
