--- a/src/assets/scss/pages/_authentication.scss
+++ b/src/assets/scss/pages/_authentication.scss
@@ -27,7 +27,7 @@
 }
  
 .auth-one-bg{
-    background-image: url("../../images/homepage/Frame.svg");
+    background-image: url("../../images/figma/Frame.svg");
     background-position: center 50px;
     background-repeat: no-repeat;
     background-size: 65%;
