update left sidebar - initial

--- a/src/assets/scss/plugins/_custom-scrollbar.scss
+++ b/src/assets/scss/plugins/_custom-scrollbar.scss
@@ -51,7 +51,7 @@
 .simplebar-content-wrapper {
   direction: inherit;
   box-sizing: border-box !important;
-  position: relative;
+  position: fixed;
   display: block;
   height: 100%; /* Required for horizontal native scrollbar to not appear if parent is taller than natural height */
   width: auto;
